2010-07-10  Matevz Tadel  <matevz.tadel@ijs.si>

	* wactest.C:
	Add iso-maker and GTS surface to the scene.

2010-07-06  Matevz Tadel  <matevz.tadel@ijs.si>

	* wactest.C:
	Instantiate TabletRnrMod.

2010-06-20  Matevz Tadel  <matevz.tadel@ijs.si>

	* wactest.C:
	Add extended grid needed for relative / continuous stroke modes.

2010-06-11  Matevz Tadel  <matevz.tadel@ijs.si>

	* wactest.C:
	New macro for testing tablet stuff.

	* ChangeLog:
	New file.